--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,7 +4,7 @@
 *  Copyright: 2025, Hanák Renáta
 *  Group: Szoft 1/N
 *  Date: 2025-06-07
-*  Github: https://github.com/reni-dev/
+*  Github: https://github.com/Reni-dev/
 *  Licenc: MIT
 -->
 
